tests/testsuite/snapshots/testsuite__repl__case_01_nil.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: nil;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m
----- stderr -----
