tests/testsuite/snapshots/testsuite__repl__case_09_print_statement.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: print nil;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0mnil
[0mλ» [1m[0m
----- stderr -----
