tests/testsuite/snapshots/testsuite__repl__case_12_multiple_statements.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: print 42; print 27;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m42
27
[0mλ» [1m[0m
----- stderr -----
