tests/testsuite/snapshots/testsuite__repl__case_13_print_print.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: print print 42;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0mParse error
UnexpectedToken { expected: [LParen, String, Number, True, False, Nil, Minus, Bang], actual: Token { kind: Print, loc: <input>:6..11 } }
[0mλ» [1m[0m
----- stderr -----
