tests/testsuite/snapshots/testsuite__repl__case_15_use_variable.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: var x = 27; print x;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m27
[0mλ» [1m[0m
----- stderr -----
