tests/testsuite/snapshots/testsuite__repl__case_19_undefined_variable.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: var x = 42; print x + y;
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0mError: cannot find name `y` in this scope
   ╭─[<input>:1:23]
   │
 1 │ var x = 42; print x + y;
   │                       ─  
   │                           
───╯
[0mλ» [1m[0m
----- stderr -----
